# santana-app

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENCE  README.md  install.sh  stresstest.c
examples/: cpu_cores.sh  cpu_usage.sh  demo.sh  exp.sh  http_requests.sh  load_average.sh  memory_usage.sh  network.sh  network_bandwidth.sh  sine_wave.sh
santana-rs/: Cargo.toml
santana-rs/src/: app.rs  buffer.rs  config.rs  main.rs  source.rs
santana-rs/src/ui/: charts.rs  layout.rs  mod.rs  status.rs  widgets.rs
src/: app.rs  buffer.rs  chart.cpp  chart.hpp  config.hpp  config.rs  data_source.hpp  main.cpp  main.rs  parser.cpp  parser.hpp  parser.rs  renderer.cpp  renderer.hpp  ring_buffer.hpp  stdin_source.cpp  stdin_source.hpp
src/ui/: charts.rs  header.rs  help.rs  layout.rs  mod.rs  status.rs  theme.rs  widgets.rs
tests/: parser_tests.cpp
