[package]
name = "santana"
version = "2.0.0"
edition = "2021"
description = "Live terminal data visualization. Pipe anything, plot everything"

[[bin]]
name = "santana"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["use-dev-tty"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
unicode-width = "0.2"
libc = "0.2"
regex = "1"
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"
